Fix mobile spacing & move favicon to image folder

--- a/css/mobile-styles.css
+++ b/css/mobile-styles.css
@@ -23,13 +23,15 @@
 	.mb-nav-btn {
 		font-size: 3vh;
 		color: #c2c2c2;
-	}	
+	}
+
 	/* Override mobile headline section */
 	#mobile-mainpic {
 		display: block;
-		max-width: 100%;
-		width: 100vw;
 		height: auto;
+		width: 100vw;
+		max-width: 100%;
+		margin-top: 6vh;
 	}
 	#headline-box {
 		height: auto;
@@ -38,25 +40,24 @@
 		align-items: center;
 		padding-left: 0;
 	}
+
 	#slogan {
 		font-size: 5vh;
-		padding-top: 4vh;
-	}
-	#sub-slogan {		
-		font-size: 3.5vh;			
-	}
-	#slogan-intro {
-		font-size: 2vh;
-		padding-top: 2vh;
 	}
 	#spotify {
-		margin: 2vh auto;
+		margin-top: 5vh;
 		width: 90vw;
 		height: 50vh;
 	}
+	#social-media-title {
+		display: block;
+		color: #c2c2c2;
+		margin: 5vh auto;
+		font-family: 'Londrina Solid', cursive;
+	}
 	.app-icon {
 		font-size: 3vw;
-		margin: 2vh 5vw 4vh;
+		margin: 1vh 5vw 8vh;
 	}
 
 	.carousel-item {
@@ -77,10 +78,8 @@
 	#mb-skill-icons {
 		display: block;
 	}
-	#skill-footer {
-		font-weight: 100;
-		font-size: 1rem;
-		line-height: 1.5rem;
+	#skill-slogan {
+		font-size: 3vh;
 	}
 
 	.footer-txt {
